Fixed bugs on Safari, prevented map from expanding when panning with ctrl key, removed map page from router

--- a/teleop-vue/src/components/ActionButton/ActionButton.scss
+++ b/teleop-vue/src/components/ActionButton/ActionButton.scss
@@ -7,6 +7,7 @@
     border-color: darkgreen;
     padding: 0.5rem;
     font-weight: bold;
+    margin: 0px;
     --hover-background-color: rgb(77, 255, 77);
 }
 
