--- a/teleop-vue/src/components/VideoParticipant/VideoParticipant.scss
+++ b/teleop-vue/src/components/VideoParticipant/VideoParticipant.scss
@@ -35,7 +35,6 @@
 }
 
 .video-layout {
-    width: 100%;
     height: 100%;
     object-fit: contain;
 }
